--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Arial;
+  color: #403e3e;
+}
 .App {
   text-align: center;
 }
@@ -11,7 +15,6 @@
   /*background-color: #222;*/
   height: 150px;
   padding: 20px;
-  color: white;
 }
 
 .app-main {
